--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EmbeddedServer</string>
     <string name="accessibility_service_label">Web Server</string>
     <string name="accessibility_service_description">Web Server\'s accessibility service</string>
+    <string name="app_description">Phone App</string>
 </resources>
